--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,7 +1,7 @@
 name: Update gist with WakaTime stats
 on:
   schedule:
-    - cron: "* * * * *"
+    - cron: "53 17 * * *"
 jobs:
   update-gist:
     runs-on: ubuntu-latest
