--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -2,6 +2,9 @@ name: Update gist with WakaTime stats
 on:
   schedule:
     - cron: "0 17 * * *"
+  workflow_dispatch:
+    input:
+    
 jobs:
   update-gist:
     runs-on: ubuntu-latest
